[gd_scene load_steps=8 format=3 uid="uid://d1pifdvndfi24"]

[ext_resource type="Script" uid="uid://cd7rpw5e7f6jd" path="res://scripts/add_ingredients_menu.gd" id="1_bcbpr"]
[ext_resource type="PackedScene" uid="uid://33qrbtnnfjbg" path="res://scenes/add_liquor_button.tscn" id="3_1me88"]
[ext_resource type="Texture2D" uid="uid://g6xoir61ly83" path="res://assets/ui/liquor_menu.png" id="4_wrjbj"]
[ext_resource type="Theme" uid="uid://vxihg5pg2oef" path="res://resources/add_ingredients_menu.tres" id="5_iukm6"]
[ext_resource type="Theme" uid="uid://dcbgnj10dfljm" path="res://resources/titles.tres" id="6_1j87c"]
[ext_resource type="Texture2D" uid="uid://ccy3bc5n4d4uo" path="res://assets/ui/down_arrow.png" id="6_hfego"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iukm6"]
texture = ExtResource("4_wrjbj")
texture_margin_left = 90.0
texture_margin_top = 130.0
texture_margin_right = 90.0
texture_margin_bottom = 130.0
region_rect = Rect2(0, 0, 495, 859)

[node name="AddIngredientsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 475.0
offset_bottom = 775.0
theme = ExtResource("5_iukm6")
script = ExtResource("1_bcbpr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 495.0003
offset_bottom = 859.0
texture = ExtResource("4_wrjbj")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 130

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="PanelTitle" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_1j87c")
text = "Ingredients"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="AddLiquorList" type="VBoxContainer" parent="TextureRect/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="AddLiquorButton" parent="TextureRect/MarginContainer/VBoxContainer/ScrollContainer/AddLiquorList" instance=ExtResource("3_1me88")]
layout_mode = 2

[node name="AddLiquorButton2" parent="TextureRect/MarginContainer/VBoxContainer/ScrollContainer/AddLiquorList" instance=ExtResource("3_1me88")]
layout_mode = 2

[node name="AddLiquorButton3" parent="TextureRect/MarginContainer/VBoxContainer/ScrollContainer/AddLiquorList" instance=ExtResource("3_1me88")]
layout_mode = 2

[node name="AddLiquorButton4" parent="TextureRect/MarginContainer/VBoxContainer/ScrollContainer/AddLiquorList" instance=ExtResource("3_1me88")]
layout_mode = 2

[node name="AddLiquorButton5" parent="TextureRect/MarginContainer/VBoxContainer/ScrollContainer/AddLiquorList" instance=ExtResource("3_1me88")]
layout_mode = 2

[node name="DownArrow" type="TextureRect" parent="TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.000153
offset_top = -61.0
offset_right = 27.999847
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("6_hfego")
stretch_mode = 2

[node name="ResizableTexturePanel" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(400, 862.67)
layout_mode = 0
offset_left = 818.0
offset_top = 161.0
offset_right = 1018.0
offset_bottom = 761.0
theme_override_styles/panel = SubResource("StyleBoxTexture_iukm6")
